<resources>
    <string name="app_name">Labo5</string>
    <string name="refresh">refresh</string>
    <string name="test_configuration">Dispatcher performance tester</string>
    <string name="back">back</string>
    <string name="start_tests">Start tests</string>
    <string name="status">Status</string>
    <string name="chart_title">"Dispatcher Performance"</string>
    <string name="download_quantity">Download quantity :</string>
    <string name="quantity">Qty</string>
    <string name="test">test</string>
    <string name="no_internet_connection">No internet connection</string>
</resources>